--- a/Js/js-1.html
+++ b/Js/js-1.html
@@ -2,9 +2,13 @@
 <title>This is an HTML canvas</title>
 <link rel="stylesheet" href="../assets/styles.css">
 </head>
+<button onclick = "displayText()">Click me!</button>
+<button onclick = "hideText()"> Reset</button>
+
+<div id="myDIV"></div>
+
 <body><h1>Playing the HTML canvas</h1>
 <h4>Time-stamp: <2019-01-21 20:11:03 Chuck Siska></h4>
-
 <canvas id="grid" width="400" height="400"></canvas>
 
 </body>
@@ -17,11 +21,11 @@
 function draw_title( context ) 
 {
     context.save( );
-    context.fillStyle = 'lightgreen';
+    context.fillStyle = 'lightgrey';
     context.font = "30px Arial";
-    context.fillText( "Grid", 170, 40 );
+    context.fillText( "Grid", 150, 140 );
     context.restore( );
-}	
+}
 // =====================================================  Main ====
   var canvas = document.getElementById( "grid" );
   var context = canvas.getContext( "2d" );
@@ -29,12 +33,17 @@ function draw_title( context )
   // Draw a grid
   draw_grid( context, 10, 50, 'white', 'yellow' );
   draw_title( context );
-  context.fillStyle = "red";
- // context.moveTo(0,0);
-  //context.lineTo(200,100);
-  //context.stroke();
-  
 
+  function displayText()
+  {
+    var x = document.getElementById("myDIV");
+    x.innerHTML = "Hello";
+  }
 
+  function hideText()
+  {
+    var x = document.getElementById("myDIV");
+    x.innerHTML = "";
+  }
 </script>
 </html>
